xfsprogs-2.9.x
	- Changed mkfs.xfs -f to wipe all old AG headers, not just the ones
	  up to the end of the new filesystem size.
	- Purged the end of device whack buffer in mkfs.xfs to prevent a
	  warning in certain device sizes.
	- Man page fixes. Thanks to Utako Kusaka <u-kusaka@wm.jp.nec.com>
	  for this.

xfsprogs-2.9.4 (7 Sep 2007)
	- Fixed xfs_repair segfaulting with directory block size different
	  to the filesystem blocksize.
	- Fixed xfs_quota disable, enable, off and remove commands.
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for this.
	- Improved the robustness of xfs_metadump.
	- Fix link issues with pthread library.

xfsprogs-2.9.3 (23 July 2007)
	- Make xfs_repair support > 512 byte sector sizes.
	- Fixed include Makefile for new common header (xfs_metadump.h).
	- Fixed xfs_quota state command segfaulting with no mounted
	  XFS filesystems.
	- Fixed xfs_quota printing out unusual message with "path n" command
	  with no mounted XFS filesystems.
	- Fixed "quota -n" command with project IDs.
	- Improved "free" output when project quotas are defined, but
	  haven't been enable on the filesystem.
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for the above four
	  fixes.

xfsprogs-2.9.2 (18 July 2007)
	- Next major round of xfs_repair performance improvements:
		- Cache disk nlink values in Phase 3 for Phase 7.
		- Do multithreaded prefetch/processing based on AG stride
		  option (ie. for concats).
		- Don't trash lost+found at the start of Phase 4, eliminates
		  repeated "moving disconnected inode to lost+found" with
		  successive xfs_repair runs.
		- Do multi-threaded sequential metadata prefetch.
		  Method based on Agami patches posted for 2.7.18 xfsprogs.
		- Improve the libxfs cache with priority tagging to keep
		  blocks around that have unfavourable I/O characteristics.
	- Make mkfs.xfs -f zero the old secondary superblocks before writing
	  the new superblocks.
	- Fix up xfs_info and xfs_quota's -c handling with global commands.