@@ -31,7 +31,8 @@ command.
 .TP
 .B \-e
 Enables unwritten extent support on a filesystem that does not
-already have this enabled.
+already have this enabled (for legacy filesystems, it can't be
+disabled anymore at mkfs time).
 .TP
 .B \-f
 Specifies that the filesystem image to be processed is stored in a
